Increased min-height of Series wrap, adjusted button locations. Fixes #280.

--- a/content/themes/glp/less/style.less
+++ b/content/themes/glp/less/style.less
@@ -286,7 +286,7 @@
 		iframe, object, embed, .participant-video-embed {
 			position: relative;
 			top: 0; left: 0;
-			width: 100%; height: 88%;
+			width: 100%; height: 85%;
 			min-height: 350px;
 		}
 		.participant-video-buttons {
