--- a/content/themes/glp/less/tax-series.less
+++ b/content/themes/glp/less/tax-series.less
@@ -3,7 +3,7 @@
 		#wrap {
 			color: @white;
 			background: fade(@black, 75%);
-			min-height: 600px;
+			min-height: 750px;
 		}
 		#content {
 			position: relative;
